# research-projects

./: .gitignore  4X space explorer outline.mhtml  4X space explorer outline.txt  AI and behavioral science.mhtml  AI and behavioral science.txt  AI task completion growth.mhtml  AI task completion growth.txt  Autoregression and non-Markovian structure in natural systems - Claude.mhtml  Autoregression and non-Markovian structure in natural systems.txt  Behavioural Capture.txt  Comprehension phase-locking protocol  Comprehension phase-locking protocol.mhtml  Comprehension phase-locking protocol.txt  Curator_ Memory Management and Coordination.mhtml  Curator_ Memory Management and Coordination.txt  Dockerfile  Educational implications of FPC.mhtml  Educational implications of FPC.txt  Emotion as rhythmic inference framework.mhtml  Emotion as rhythmic inference framework.txt  Entropy and Autonomy.txt  Essay expansion options.mhtml  Essay expansion options.txt  Expanded file list  Expanded file list.txt  Expanding a simulation paper with rigor - Claude.mhtml  Expanding a simulation paper with rigor.txt  Expanding categorical sheaf framework with rigor.mhtml  Expanding categorical sheaf framework with rigor.txt  Field theory of behavioral capture.mhtml  Field theory of behavioral capture.txt  File extension memory explanation.mhtml  File extension memory explanation.txt  Fixed-Point Causality - version 2.txt  Font Generation from Grid Template.mhtml  Font Generation from Grid Template.txt  Font generator website idea.txt  Generative experiment ideas.mhtml  (+141 more)
dashboard/: app.py
(+523 files in other folders)
