cabal-version:       >=1.10
name:                ebssc-spherepop
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
      EBSSC.Core
      EBSSC.Rules
      EBSSC.Policy
  build-depends:
      base >=4.9 && <5,
      containers,
      text,
      bytestring,
      unordered-containers,
      time,
      uuid,
      hashable
  default-language: Haskell2010

executable ebssc-demo
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base,
      ebssc-spherepop,
      text,
      containers,
      bytestring,
      uuid
  default-language: Haskell2010
